<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddAssessment">

    <ScrollView
        android:id="@+id/assessment_scrollview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assessment_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assessment_title"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/add_assessment_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/assessment_example"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assessment_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assessment_start_date"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/add_assessment_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assessment_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assessment_end_date"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/add_assessment_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/assessment_radio_button_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessment_scrollview">

        <RadioButton
            android:id="@+id/objective_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/objective_radiobutton_text" />

        <RadioButton
            android:id="@+id/performance_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/performance_radiobutton_text"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="168dp" />
    </RadioGroup>

    <Button
        android:id="@+id/save_assessment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="170dp"
        android:text="@string/save_assessment"
        android:onClick="saveNewAssessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_radio_button_group" />

</androidx.constraintlayout.widget.ConstraintLayout>