<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseDetail">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/course_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_start_date"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_end_date"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_status"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/course_status_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_instructor_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/instructor_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_instructor_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_instructor_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/instructor_phone_number"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_instructor_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/phone_hint"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/course_instructor_email_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/instructor_email_address"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_instructor_email_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_note"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_course_note"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_course_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="saveCourse"
                    android:text="@string/save_course" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider2"
        android:layout_width="422dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_assessment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:contentDescription="@string/add_assessment"
        android:onClick="addAssessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_foreground"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assessment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>